Moving towards Database with DAO/DTO structure - Address and Product done - Renamed PizzaDeliveryAPI for consistency based on DAO implementations
Co-authored-by: netox <gitnetox@users.noreply.github.com>
Co-authored-by: Kathrin <kathrinple@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "d:\\Java Libraries\\mariadb-java-client-3.1.4.jar",
+        "d:\\Java Libraries\\jbcrypt-0.4.jar"
     ]
 }
