--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,6 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "d:\\Java Libraries\\mariadb-java-client-3.1.4.jar",
-        "d:\\Java Libraries\\jbcrypt-0.4.jar"
+        "lib/**/*.jar"
     ]
 }
